--- a/extensions/interactions/NumberWithUnitInput/NumberWithUnitInput.html
+++ b/extensions/interactions/NumberWithUnitInput/NumberWithUnitInput.html
@@ -7,6 +7,9 @@
           </schema-based-editor>
         </ng-form>
       </div>
+      <div ng-if="errorMessage" class="col-lg-12 col-md-12 col-sm-12" style="color: red;">
+        <[errorMessage]>
+      </div>
     </form>
   </div>
 </script>
